--- a/index.html
+++ b/index.html
@@ -24,6 +24,15 @@
             Experience : Google engineer | Game developer | Website developer
         </section>
 
+        <article>
+            My story: 
+        </article>
+
+        <aside>
+            this is an add
+        </aside>
+
+        <a href="https://yt3.ggpht.com/yti/APfAmoEr8YREPzm8TyFxDI1K1IptrNMLb1EIi3L8Fc8mZA=s88-c-k-c0x00ffffff-no-rj-mo" target="_main"> <img src="https://yt3.ggpht.com/yti/APfAmoEr8YREPzm8TyFxDI1K1IptrNMLb1EIi3L8Fc8mZA=s88-c-k-c0x00ffffff-no-rj-mo"></a>
     </main>
 
     <footer>
