--- a/index.html
+++ b/index.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="en" class="html">
 <head>
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
@@ -8,34 +8,21 @@
     <link rel="stylesheet" href="style.css">
 </head>
 
-<body>
+<body class="body">
 
-    <header>
-        <h1>My Portfolio</h1>
+    <header class="header">
+        <br>
+        <h1 class="head1">My Portfolio</h1>
     </header>
 
-    <main>
+    <main class="main">
 
-        <section>
-            Education : IIT (CEO) | School (NVM)
-        </section>
+        
 
-        <section>
-            Experience : Google engineer | Game developer | Website developer
-        </section>
-
-        <article>
-            My story: 
-        </article>
-
-        <aside>
-            this is an add
-        </aside>
-
-        <a href="https://yt3.ggpht.com/yti/APfAmoEr8YREPzm8TyFxDI1K1IptrNMLb1EIi3L8Fc8mZA=s88-c-k-c0x00ffffff-no-rj-mo" target="_main"> <img src="https://yt3.ggpht.com/yti/APfAmoEr8YREPzm8TyFxDI1K1IptrNMLb1EIi3L8Fc8mZA=s88-c-k-c0x00ffffff-no-rj-mo"></a>
     </main>
 
-    <footer>
+
+    <footer class="footer">
 
         <h5>Contacts: Phone number: XXXXXXJ99 <br> Email: example.good.gmail.com
         </h5>
