--- a/index.html
+++ b/index.html
@@ -28,7 +28,7 @@
   <section id="home">  
     <span class="hello"><b>Hello<span class="__">_</span></b></span>
     <h1 class="title_1">I am <span class="name_1"></span></h1>
-    <img src="/pics/pfp.png" alt="pic" width="200px" height="270px" class="photo">
+    <img src="https://live.staticflickr.com/65535/52686023112_4bfbcaf522_k.jpg" alt="pic" width="200px" height="270px" class="photo">
     <h3 class="work">I am a <span class="multiText"></span></h3>
     <p class="work_2">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Sed euismod sem at justo convallis, id dictum est dictum. <br>Aliquam in fermentum purus. Morbi malesuada velit vel sem blandit, vel iaculis lacus viverra.</p>
     
